# game_2048

./: Cargo.toml  README.md
src/: colors.rs  components.rs  lib.rs  main.rs  styles.rs  ui.rs  utility.rs
