[package]
name = "boxes"
version = "0.1.0"
edition = "2021"
authors = ["sangkhuudev <sangkhuudev@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name ="boxes"

[dependencies]
bevy = "0.11.3"
bevy_easings = "0.11.1"
itertools = "0.10.5"
rand = "0.8.5"